--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tourist Attraction Directory</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Tourist Attraction Directory</h1>
-    <div id="attractions"></div>
+    <div id="attractionList"></div>
+    <div id="navigation">
+        <button id="prev">Previous</button>
+        <button id="next">Next</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
