--- a/index.html
+++ b/index.html
@@ -4,24 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tourist Attraction Directory</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f8ff; /* Light blue background */
+            color: #333;
+        }
+
+        h1 {
+            text-align: center;
+            color: #008080; /* Teal heading color */
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        #attractionList {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .attraction-item {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            transition: transform 0.3s ease-in-out;
+            border: 1px solid #e0e0e0;
+        }
+
+        .attraction-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .attraction-item h2 {
+            color: #4682b4; /* Steel blue title color */
+            margin-bottom: 10px;
+        }
+
+        .attraction-item p {
+            line-height: 1.6;
+        }
+
+        #navigation {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        #prev, #next {
+            background-color: #ffa07a; /* Light salmon button color */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            margin: 0 10px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #prev:hover, #next:hover {
+            background-color: #fa8072; /* Salmon hover color */
+        }
+
+        #recordCount {
+            margin: 0 10px;
+            line-height: 2.5;
+        }
+
+        /* Light Theme (default) */
+        .light-theme {
+            background-color: #f0f8ff;
+            color: #333;
+        }
+
+        /* Dark Theme (if you add a theme toggle) */
+        .dark-theme {
+            background-color: #222;
+            color: #eee;
+        }
+
+        .dark-theme h1, .dark-theme .attraction-item h2 {
+            color: #87ceeb; /* Light sky blue dark theme heading*/
+        }
+
+        .dark-theme .attraction-item {
+            background-color: #333;
+            border: 1px solid #555;
+        }
+
+        .dark-theme #prev, .dark-theme #next {
+            background-color: #555;
+        }
+
+        .dark-theme #prev:hover, .dark-theme #next:hover{
+            background-color: #777;
+        }
+    </style>
 </head>
 <body class="light-theme">
     <h1>Tourist Attraction Directory</h1>
-    <button id="themeToggle">Toggle Theme</button>
-    <div id="filterControls">
-        <label for="filterType">Filter By:</label>
-        <select id="filterType">
-            <option value="State">State</option>
-            <option value="City">City</option>
-            <option value="Category">Category</option>
-        </select>
-        <input type="text" id="filterValue" placeholder="Enter filter value">
-        <button id="filterButton">Filter</button>
-        <button id="showAllButton">Show All</button>
-        <button id="showOneButton">Show one by PlaceID</button>
-        <input type="number" id="placeIDValue" placeholder="Enter PlaceID">
-    </div>
     <div id="attractionList"></div>
     <div id="navigation">
         <button id="prev">Previous</button>
